# visionsim

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  DEVELOPMENT.md  NOTES.md  README.md  ROADMAP.md  dev.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tasks.py
.github/workflows/: integration_tests.yml
docs/: cli.rst  colmaptools.rst  color.rst  conf.py  dataset.rst  docsapi.rst  docscli.rst  docsinstallation.rst  docsquickstart.rst  index.rst  io.rst  plotting.rst  render.rst  schema.rst  tblender.rst  tcolmap.rst  tdataset.rst  temulate.rst  tffmpeg.rst  tinterpolate.rst  ttransforms.rst  utils.rst
docs/source/: autocomplete.rst  conf.py  contents.rst  development.rst  docs_examples_templates.rst  example.ipynb  example.py  index.rst  installation.rst  interpolation.rst  overview.rst  quick-start.rst  simulation.rst  spsim.events.rst  spsim.interpolate.rife.rst  spsim.nodes.rst  spsim.rst  spsim.tasks.rst
docs/source/apidocs/: modules.rst  spsim.dataset.rst  spsim.emulate.dvs.rst  spsim.emulate.rst  spsim.interpolate.rife.rst  spsim.interpolate.rst  spsim.rst  spsim.simulate.nodes.rst  spsim.simulate.rst  spsim.tasks.rst  spsim.utils.rst  visionsim.dataset.rst  visionsim.emulate.dvs.rst  visionsim.emulate.rst  visionsim.interpolate.rst  visionsim.rst  visionsim.simulate.nodes.rst  visionsim.simulate.rst  visionsim.utils.rst
docs/source/clidocs/: tasks.rst  visionsim.cli.rst
docs/source/sections/: datasets.rst  emulation.rst  interpolation.rst  simulation.rst
docs/source/tutorials/: distributed-sim.rst  extending.rst  first_interpolation.rst  large-dataset.rst  parallel-sim.rst  preexisting-ds.rst  stereo.rst
docs/source/usage/: interpolation.rst  quick-start.rst
examples/: README.md  extended_service.py  quickstart.sh  render_animation.py  render_animation_parallel.py  render_custompath.py  renderpool_progressbar.py  renderpool_simple.py
examples/blender/: extended_service.py  render_animation.py  render_animation_parallel.py  render_custompath.py  renderpool_progressbar.py  renderpool_simple.py
examples/interpolation/: interpolate_simple_rife.py
examples/sensors/: edh_spc.py  emulate_active_spcs.ipynb  ewh_spc.py  imu.py  rgb.py
scripts/: mkdataset.py
spsim/: cli.py  colmaptools.py  color.py  dataset.py  imu.py  interpolate_wrapper.py  io.py  plotting.py  render.py  schema.py  types.py  utils.py
spsim/dataset/: __init__.py  dataset.py  schema.py
spsim/diffpose/: IMU.py  iSfM.py  numdiff.py
spsim/emulate/: imu.py  rgb.py
spsim/emulate/dvs/: __init__.py
spsim/events/: __init__.py
spsim/events/v2e/: emulator.py  emulator_utils.py
spsim/interpolate/: __init__.py  pose.py
spsim/interpolate/rife/: RIFE_HDv3.py  inference_img.py
spsim/nodes/: __init__.py  flow.py  normals.py  segmentation.py
spsim/simulate/: blender.py
spsim/tasks/: __init__.py  blender.py  colmap.py  common.py  dataset.py  emulate.py  ffmpeg.py  interpolate.py  transforms.py
spsim/utils/: cli.py  colmaptools.py  color.py  plotting.py  progress.py
src/spsim/: color.py  io.py  render.py  utils.py
tasks/: __init__.py  blender.py  colmap.py  dataset.py  emulate.py  ffmpeg.py  interpolate.py  transforms.py
tests/: conftest.py  test_cli.py  test_color.py  test_dataset.py  test_interpolate.py  test_simulate.py
tests/cli/: test_cli.py
tests/tasks/: test_cli.py  test_spsim_cli.py
visionsim/: __init__.py
visionsim/cli/: __init__.py  blender.py  common.py  dataset.py  emulate.py  ffmpeg.py  interpolate.py  transforms.py
visionsim/dataset/: __init__.py  dataset.py  schema.py
visionsim/emulate/: imu.py  rgb.py  spc.py
visionsim/interpolate/: __init__.py  pose.py
visionsim/simulate/: __init__.py  blender.py  install.py
visionsim/tasks/: __init__.py  blender.py  common.py  dataset.py  emulate.py  ffmpeg.py  interpolate.py  transforms.py
visionsim/utils/: color.py  progress.py
(+39 files in other folders)
