[project]
name = "spsim"
description = "Single Photon Simulator and Tools"
version = "0.0.1"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "opencv-python",
    "imageio",
    "more_itertools",
    "numpy",
    "torch",
    "matplotlib",
    "scipy",
    "invoke",
    "tqdm",
    "natsort",
    "rich",
    "jsonschema",
    "torchvision",
    "OpenEXR",
    "multiprocess",
    "rpyc",
    "tdigest"
]

[project.scripts]
spsim = "spsim.tasks:program.run"

[tool.setuptools.packages.find]
include = ["spsim*"]

[project.optional-dependencies]
dev = [
    "mypy",
    "coverage",
    "hypothesis",
    "pre-commit",
    "pytest",
    "ruff",
    "sphinx",
    "sphinxcontrib-programoutput",
    "sphinx-copybutton",
    "sphinxcontrib-napoleon",
    "nbsphinx",
    "ipykernel",
    "furo",
    "types-jsonschema",
    'scipy-stubs; python_version >= "3.10"'
]

[tool.ruff]
line-length = 121
exclude = ["spsim/interpolate/rife/*"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
