[project]
name = "visionsim"
description = "Single Photon Simulator and Tools"
version = "0.0.1"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "opencv-python",
    "imageio",
    "more_itertools",
    "numpy",
    "torch",
    "matplotlib",
    "scipy",
    "invoke",
    "tqdm",
    "natsort",
    "rich",
    "jsonschema",
    "torchvision",
    "OpenEXR",
    "multiprocess",
    "rpyc",
    "tdigest",
    "tyro"
]

[project.scripts]
visionsim = "visionsim.cli:main"

[tool.setuptools.packages.find]
include = ["visionsim*"]

[project.optional-dependencies]
dev = [
    "mypy",
    "coverage",
    "hypothesis",
    "pre-commit",
    "pytest",
    "ruff",
    "sphinx",
    "sphinxcontrib-programoutput >= 0.18",
    "click_extra[sphinx,pygments]",
    "sphinx-copybutton",
    "sphinxcontrib-video",
    "sphinxcontrib-napoleon",
    "furo",
    "types-jsonschema",
    'scipy-stubs; python_version >= "3.10"'
]

[tool.ruff]
line-length = 121
exclude = ["visionsim/interpolate/rife/*"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
