[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "visionsim"
description = "Towards a Sensor-Realistic World Simulator"
version = "0.1.0alpha1"
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "opencv-python",
    "imageio",
    "more_itertools",
    "numpy",
    "torch",
    "matplotlib",
    "scipy",
    "invoke",
    "tqdm",
    "natsort",
    "rich",
    "jsonschema",
    "torchvision",
    "OpenEXR",
    "multiprocess",
    "rpyc",
    "tdigest",
    "tyro"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
"GitHub" = "https://github.com/WISION-Lab/visionsim"

[project.scripts]
visionsim = "visionsim.cli:main"

[tool.setuptools.packages.find]
include = ["visionsim*"]

[project.optional-dependencies]
dev = [
    "mypy",
    "coverage",
    "hypothesis",
    "pre-commit",
    "pytest",
    "ruff",
    "sphinx",
    "sphinxcontrib-programoutput >= 0.18",
    "click_extra[sphinx,pygments]",
    "sphinx-copybutton",
    "sphinxcontrib-video",
    "sphinxcontrib-napoleon",
    "furo",
    "types-jsonschema",
    'scipy-stubs; python_version >= "3.10"'
]

[tool.ruff]
line-length = 121
exclude = ["visionsim/interpolate/rife/*"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
